--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,134 +1,21 @@
-antlr4-python3-runtime==4.9.2
-anyio==3.6.2
-astroid==2.4.2
-asttokens==2.0.5
-attrs==19.3.0
-Automat==0.8.0
-autopep8==1.5.4
-backcall==0.2.0
-bcrypt==3.2.0
-blinker==1.4
-certifi==2019.11.28
-cffi==1.14.6
-chardet==3.0.4
+anyio==3.7.0
+certifi==2023.5.7
 click==8.1.3
-cloud-init==21.3
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-crcmod==1.7
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-debugpy==1.6.0
-decorator==5.1.1
-defer==1.0.6
-distro==1.5.0
-distro-info===0.23ubuntu1
-docker==5.0.0
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-entrypoints==0.3
-et-xmlfile==1.1.0
-executing==0.8.3
+exceptiongroup==1.1.1
+fastapi==0.96.0
 h11==0.14.0
-httpcore==0.17.0
-httplib2==0.14.0
-httpx==0.24.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==16.10.1
-ipykernel==6.13.0
-ipython==8.4.0
-isort==5.6.2
-jedi==0.18.1
+httpcore==0.17.2
+httpx==0.24.1
+idna==3.4
 Jinja2==3.1.2
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-jupyter-client==7.3.1
-jupyter-core==4.10.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-macaroonbakery==1.3.1
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-more-itertools==4.2.0
-nest-asyncio==1.5.5
-netifaces==0.10.4
-nodeenv==1.7.0
-oauthlib==3.1.0
-packaging==21.3
-paramiko==2.7.2
-parso==0.8.3
-pexpect==4.6.0
-pickleshare==0.7.5
-ply==3.11
-prompt-toolkit==3.0.29
-protobuf==3.6.1
-psutil==5.5.1
-pure-eval==0.2.2
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycodestyle==2.6.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==1.9.73
-pydantic==1.10.7
-Pygments==2.12.0
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pylint==2.6.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyparsing==3.0.9
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==23.1.0
-rbql==0.20.1
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
+MarkupSafe==2.1.3
+nodeenv==1.8.0
+prisma==0.8.2
+pydantic==1.10.9
+PyJWT==2.7.0
+python-dotenv==1.0.0
 sniffio==1.3.0
-sos==4.1
-ssh-import-id==5.10
-stack-data==0.2.0
-systemd-python==234
-texttable==1.6.4
-toml==0.10.1
-tomlkit==0.11.7
-tornado==6.1
-traitlets==5.2.2.post1
-Twisted==18.9.0
-typing-extensions==4.5.0
-ubuntu-advantage-tools==27.3
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-wadllib==1.3.3
-wcwidth==0.2.5
-websocket-client==0.59.0
-wrapt==1.12.1
-zipp==1.0.0
-zope.interface==4.7.1
+starlette==0.27.0
+tomlkit==0.11.8
+typing-extensions==4.6.3
+uvicorn==0.22.0
