Add Marvel API keys to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
+## --- Marvel API keys ---
+MARVEL_PRIVATE_KEY=PUBLIC-API-KEY
+MARVEL_PUBLIC_KEY=PRIVATE-API-KEY
+
 ## --- Database ---
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
