--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ services:
       - postgres-volume:/var/lib/postgresql/data
     restart: unless-stopped
 
+  api:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
+    environment:
+      API_PORT: ${API_PORT:-8080}
+      DATABASE_URL: ${DATABASE_URL:-postgres://user:password@db:5432/tf}
+    ports:
+      - "${API_PORT:-8080}:${API_PORT:-8080}"
+    restart: always
 
 volumes:
   postgres-volume:
