--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.7.0
+autopep8==2.0.2
 certifi==2023.5.7
 click==8.1.3
 exceptiongroup==1.1.1
@@ -11,11 +12,13 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 nodeenv==1.8.0
 prisma==0.8.2
+pycodestyle==2.10.0
 pydantic==1.10.9
 PyJWT==2.7.0
 python-dotenv==1.0.0
 sniffio==1.3.0
 starlette==0.27.0
+tomli==2.0.1
 tomlkit==0.11.8
 typing-extensions==4.6.3
 uvicorn==0.22.0
