--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ anyio==3.7.0
 autopep8==2.0.2
 certifi==2023.5.7
 click==8.1.3
+dnspython==2.3.0
+email-validator==2.0.0.post2
 exceptiongroup==1.1.1
 fastapi==0.96.0
 h11==0.14.0
