--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_DB=tf
 
 ## --- Backend API ---
 API_PORT=8080
+JWT_EXPIRATION_TIME=60
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
