--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       API_PORT: ${API_PORT:-8080}
       DATABASE_URL: ${DATABASE_URL:-postgres://user:password@db:5432/tf}
+      JWT_EXPIRATION_TIME: ${JWT_EXPIRATION_TIME:-60}
     ports:
       - "${API_PORT:-8080}:${API_PORT:-8080}"
     restart: always
