--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ POSTGRES_DB=tf
 ## --- Backend API ---
 API_PORT=8080
 JWT_EXPIRATION_TIME=60
+JWT_SECRET=secret
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
